@@ -724,7 +724,7 @@ sp-niobium-powder=Niobium powder
 sp-niobium-steel=Niobium steel
 sp-niobium-tin=Niobium tin
 sp-nitenol=Nitenol
-sp-nozzle=Nozzle
+sp-rocket-nozzle=Rocket nozzle
 sp-nuclear-science-pack=Nuclear science pack
 sp-nuclear-science-pack-2=Nuclear science pack 2
 sp-nuclear-science-pack-3=Nuclear science pack 3
@@ -1635,7 +1635,7 @@ sp-nitric-acid=Nitric acid
 sp-nitric-oxide=Nitric oxide
 sp-nitrogen=Nitrogen
 sp-nitrogen-dioxide=Nitrogen dioxide
-sp-nozzle=Nozzle
+sp-rocket-nozzle=Rocket nozzle
 sp-nuclear-science-pack=Nuclear science pack
 sp-nuclear-science-pack-2=Nuclear science pack 2
 sp-nuclear-science-pack-3=Nuclear science pack 3
