@@ -696,7 +696,7 @@ sp-niobium-powder=ニオブ粉末
 sp-niobium-steel=ニオブ鋼
 sp-niobium-tin=ニオブ錫
 sp-nitenol=ニチノール
-sp-nozzle=ノズル
+sp-rocket-nozzle=ノズル
 sp-nuclear-science-pack=原子力サイエンスパック
 sp-nuclear-science-pack-2=原子力サイエンスパック 2
 sp-nuclear-science-pack-3=原子力サイエンスパック 3
@@ -1559,7 +1559,7 @@ sp-niobium-tin=ニオブ錫合金
 sp-nitenol=ニチノール
 sp-nitric-acid=硝酸
 sp-nitrogen=窒素
-sp-nozzle=ノズル
+sp-rocket-nozzle=ノズル
 sp-nuclear-science-pack=原子力サイエンスパック
 sp-nuclear-science-pack-2=原子力サイエンスパック 2
 sp-nuclear-science-pack-3=原子力サイエンスパック 3
