@@ -548,7 +548,7 @@ sp-niobium-powder=Proszek niobu
 sp-niobium-steel=Stal niobowa
 sp-niobium-tin=Cyna niobowa
 sp-nitenol=Nitinol(stop)
-sp-nozzle=Dysza
+sp-rocket-nozzle=Dysza
 sp-nuclear-science-pack=Jądrowy pakiet naukowy
 sp-nuclear-science-pack-2=Jądrowy pakiet naukowy 2
 sp-nuclear-science-pack-3=Jądrowy pakiet naukowy 3
@@ -1229,7 +1229,7 @@ sp-niobium-tin=Cyna niobowa
 sp-nitenol=Nitinol(stop)
 sp-nitric-acid=Kwas azotowy
 sp-nitrogen=Azot
-sp-nozzle=Dysza
+sp-rocket-nozzle=Dysza
 sp-nuclear-science-pack=Jądrowy pakiet naukowy
 sp-nuclear-science-pack-2=Jądrowy pakiet naukowy 2
 sp-nuclear-science-pack-3=Jądrowy pakiet naukowy 3
