@@ -630,7 +630,7 @@ sp-niobium-powder=铌粉
 sp-niobium-steel=铌钢
 sp-niobium-tin=铌锡合金
 sp-nitenol=镍钛诺合金
-sp-nozzle=喷嘴
+sp-rocket-nozzle=喷嘴
 sp-nuclear-science-pack=核能科技包（核瓶）
 sp-nuclear-science-pack-2=核能科技包 2（核瓶）
 sp-nuclear-science-pack-3=核能科技包 3（核瓶）
@@ -1404,7 +1404,7 @@ sp-niobium-tin=铌锡合金
 sp-nitenol=镍钛诺合金
 sp-nitric-acid=硝酸
 sp-nitrogen=氮
-sp-nozzle=喷嘴
+sp-rocket-nozzle=喷嘴
 sp-nuclear-science-pack=核能科技包（核瓶）
 sp-nuclear-science-pack-2=核能科技包 2（核瓶）
 sp-nuclear-science-pack-3=核能科技包 3（核瓶）
