@@ -7,6 +7,7 @@ Date: 2025-05-02
     - Changed recipes for recipes in cryogenic tech branch
     - Breeder reactor now requires fluoroketone for creating isotopes
     - Antimony processing revamped and it is now unlocked after cryogenic science pack
+    - Updated some recipes related to rocket engine
   Bugfixes:
     - Icons of nuclear fuel rods were not shown correctly
 ---------------------------------------------------------------------------------------------------
